--- a/themes/homecoming/scss/site/_nav.scss
+++ b/themes/homecoming/scss/site/_nav.scss
@@ -1,255 +1,14 @@
-/* ---------------------------------------------------------------
-Navigation
---------------------------------------------------------------- */
-
-
 .nav-holder {
-	margin: .5em .5em 1em;
-	@media screen and (min-width: $break-medium) {
-		margin: 0;
-		border-top: 1px solid #2c2c2c;
-		position: relative;
-		z-index: 1;
-		&:after {
-			background-color: #ffcd00;
-			display: block;
-			width: 100%;
-			height: 4px;
-			position: absolute;
-			bottom: 0;
-			content: "";
-			z-index: -1;
-		}
-	}
-}
-
-.expand .mainnav__title {
-	border-bottom: 1px solid #666;
-}
-
-
-
-.mainnav {
-	max-height: 600px;
-	border: none;
-	background: inherit;
-	box-shadow: inherit;
-	margin-bottom: 0;
-	@media screen and (max-width: 767px) {
-		background: #444;
-		border-radius: 4px;
-		border: 1px solid #666;
-		display: block;
-		max-height: 44px;
-		overflow: hidden;
-		position: relative;
-		width: 100%;
-	}
-	&.expand {
-		max-height: 600px;
-	}
-	&__title {
-		font-size: em(20);
-		font-weight: 300;
-		line-height: 44px;
-		margin: 0;
-		position: relative;
-		text-align: left;
-		& a {
-			color: #eee;
-			display: block;
-			padding: 0 15px;
-			&:hover {
-				text-decoration: none;
-			}
-		}
-		@media screen and (min-width: $break-medium) {
-			display: none;
-		}
-	}
-	&__expandcollapse {
-		background-color: #333;
-		border-radius: 4px;
-		width: 40px;
-		height: 32px;
-		position: absolute;
-		top: 5px;
-		right: 10px;
-		border: 1px solid rgba(255,255,255,.2);
-		&:after {
-			-webkit-box-shadow: 0 10px 0 1px #bbb, 0 16px 0 1px #bbb, 0 22px 0 1px #bbb;
-			-moz-box-shadow: 0 10px 0 1px #bbb, 0 16px 0 1px #bbb, 0 22px 0 1px #bbb;
-			-ms-box-shadow: 0 10px 0 1px #bbb, 0 16px 0 1px #bbb, 0 22px 0 1px #bbb;
-			box-shadow: 0 10px 0 1px #bbb, 0 16px 0 1px #bbb, 0 22px 0 1px #bbb;
-			position: absolute;
-			left: 11px;
-			top: 0;
-			display: block;
-			width: 16px;
-			height: 0;
-			color: #888888;
-			padding: 0;
-			content: '';
-		}
-	}
-	&__list {
-		background-color: #444;
-		margin: 0;
-		padding: 0;
-		list-style: none;
-		@media screen and (min-width: $break-medium) {
-			background-color: inherit;
-			display: flex;
-			justify-content: space-between;
-		}
-	}
-	&__listitem {
-		position: relative;
-		&--active {
-			& > a {
-				background-color: #333;
-				font-weight: bold;
-				@media screen and (min-width: $break-medium) {
-					background-color: #222;
-					color: $yellow;
-				}
-			}
-		}
-		&--parent {
-
-		}
-		@media screen and (min-width: $break-medium) {
-			&:hover > a {
-				background-color: #222;
-				color: $yellow;
-				text-decoration: none;
-			}
-		}
-	}
-	&__anchor {
-		color: #eee;
-		border-bottom: 1px solid #666;
-		display: block;
-		font-size: 14px;
-		padding: .8em 0 .8em 15px;
-		position: relative;
-
-		@media screen and (min-width: $break-medium) {
-			border-bottom: none;
-			font-family: $heading-font;
-			font-weight: bold;
-			font-size: 16px;
-			padding: .8em 1em;
-			text-transform: uppercase;
-		}
-		@media screen and (min-width: $break-large) {
-			font-size: 18px;
-		}
-		@media screen and (min-width: $break-xlarge) {
-			padding: .8em 2em;
-		}
-	}
-	&__sublist {
-		display: none;
-		list-style: none;
-		margin: 0;
-		@media (min-width: $break-medium) {
-			display: block;
-			box-shadow: 0 4px 3px rgba(0,0,0,0.3);
-			position: absolute;
-			top: 100%;
-			left: -9999px;
-			width: 200px;
-			background: #222;
-		}
-	}
-}
-
-
-.mainnav__anchor--parent:after {
-	@media (min-width: $break-medium) {
-		width: 0;
-		height: 0;
-		border: 4px inset;
-		content: "";
-		border-bottom-width: 0;
-		border-top-style: solid;
-		border-color: #fff transparent transparent;
-		display: inline-block;
-		margin-left: 7px;
-		margin-bottom: 5px;
-	}
-}
-.mainnav__anchor--parent:hover {
+	border-top: 1px solid $gray-800;
+	padding-bottom: 4px;
 	&:after {
-		border-color: $yellow transparent transparent;
-	}
-}
-
-
-/* Top level hover state, preserve hover state when hovering dropdown  */
-.mainnav__listitem > a:hover,
-.mainnav__listitem > a:focus,
-.mainnav__listitem:focus > a,
-.mainnav__listitem:hover > a {
-	@media screen and (min-width: $break-medium) {
-		background-color: #222;
-		color: $yellow;
-		text-decoration: none;
-	}
-}
-
-
-/* ---------------------------------------------------------------
-Dropdowns
---------------------------------------------------------------- */
-.mainnav__listitem--parent:hover ul,
-.mainnav__listitem--parent:focus ul,
-ul.show-menu {
-	left: 0;
-}
-.mainnav__sublist li {
-	float: none;
-	position: static;
-	width: auto;
-}
-.mainnav__sublist a {
-	display: block;
-	border-bottom: 1px solid #ddd;
-	display: block;
-	font-size: 14px;
-	font-weight: normal;
-	padding: .8em 0 .8em 15px;
-	position: relative;
-	text-align: left;
-	-webkit-transition: all .2s linear;
-	-moz-transition: all .2s linear;
-	transition: all .2s linear;
-	text-transform: none;
-	font-family: $body-font;
-	@media screen and (min-width: $break-medium) {
-		border-bottom-color: #333;
-		color: #fff;
+		background-color: $yellow;
 		display: block;
-		font-size: 15px;
-		padding: 11px 15px;
-		text-align: left;
-	}
-	&:hover {
-		@media screen and (min-width: $break-medium) {
-			background-color: #333;
-			text-decoration: none;
-		}
-	}
-}
-.mainnav__list > li.last:hover ul {
-  left: auto;
-  right: 0;
-}
-.mainnav__list li.active a {
-	@media (max-width: $break-medium - 1) {
-		background-color: #eee;
-		color: $link;
-		font-weight: bold;
+		width: 100%;
+		height: 4px;
+		position: absolute;
+		bottom: 0;
+		content: "";
+		z-index: -1;
 	}
 }
