--- a/themes/homecoming/scss/global/_global.scss
+++ b/themes/homecoming/scss/global/_global.scss
@@ -33,3 +33,36 @@ img.right {margin-left: 1em; margin-bottom: 1em;}
 .visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px;}
 .visuallyhidden.focusable:active,.visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto;}
 .invisible { visibility: hidden;}
+
+
+/* --------------------------------
+
+File#: _1_text-divider
+Title: Text divider
+Descr: Labelled horizontal divider for text components
+
+-------------------------------- */
+.text-divider {
+    margin: 2em auto;
+    display: flex;
+    text-align: center;
+    align-items: center;
+
+    span {
+        font-size: 1em;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+        white-space: nowrap;
+        padding: 0 .75em;
+    }
+
+    &::before, &::after {
+        content: '';
+        display: inline-block;
+        height: 1px;
+        width: 20px;
+        flex-grow: 1;
+        background: #d3d3d4;
+        vertical-align: middle;
+    }
+}
