--- a/themes/homecoming/scss/site/_breadcrumbs.scss
+++ b/themes/homecoming/scss/site/_breadcrumbs.scss
@@ -1,39 +1,11 @@
-.breadcrumbs {
-   background-color: #333;
-   font-size: 14px;
-   list-style:none;
-   margin: 0;
-   overflow: hidden;
-   padding-left: 30px;
+.breadcrumb {
+	font-size: $font-size-base * .875;
+	& a {
+		color: #eee;
+	}
+	@include media-breakpoint-up(md) {
+		margin-right: -15px;
+		margin-left: -15px;
+	}
 }
-.breadcrumbs li {
-   color: #fff;
-   float: left;
-   height: 45px;
-   line-height: 45px;
-   list-style: none;
-   margin: 0;
-   position: relative;
-   & a {
-      color: #fff;
-      padding-left: 5px;
-   }
-}
-.main .breadcrumbs li {
-   margin-bottom: 0;
-}
-.breadcrumbs li:after {
-   color: $yellow;
-   content: "\25B8";
-   display: inline-block;
-   padding: 0 6px 0 10px;
-}
-.breadcrumbs li:last-child:after {
-   content: "";
-}
-.breadcrumbs .active {
-   padding-left: 5px;
-}
-.breadcrumbs .home a {
-   color: #fff;
-}
+
