--- a/themes/homecoming/scss/site/_footer.scss
+++ b/themes/homecoming/scss/site/_footer.scss
@@ -1,90 +1,47 @@
 .footer {
-  background: #222;
-  border-top: 8px solid #000;
-  -webkit-box-shadow: inset 0 1px 0 #2e2e2e;
-  -moz-box-shadow: inset 0 1px 0 #2e2e2e;
-  box-shadow: inset 0 1px 0 #2e2e2e;
-  color: #eee;
-  padding: 3em 0 1em;
-  position: relative;
-}
-.footer .container {
-  padding-left: 1em;
-  padding-right: 1em;
-}
-.footer p {
-  @media screen and (min-width: $break-small) {
-    @include rem(12);
-  }
-
+	background: $black;
+	color: $gray-300;
+	padding: 3em 0 1em;
+	position: relative;
+	font-size: $small-font-size;
 }
 .footer a {
-  color: #eee;
+	color: $gray-300;
 }
 .footer h4 {
-  color: #eee;
-  font-weight: 300;
-
-  text-transform: uppercase;
-  @media screen and (min-width: $break-small) {
-    margin-top: 0;
-  }
+	color: $gray-300;
+	font-weight: 300;
 }
-
 .footer-nav {
-  list-style: none;
-  margin: 0;
-  padding: 1em 0 0;
-  & li {
-    margin-bottom: 0;
-  }
-  @media screen and (min-width: $break-small) {
-    border-left: 1px solid #000;
-  }
-}
-.footer-nav:first-child {
-  padding-top: 0;
+	padding: 1em 0 0;
+	& li {
+		margin-bottom: 0;
+	}
+	@include media-breakpoint-down(xs) {
+		column-count: 2;
+		column-gap: 10px;
+	}
+	@include media-breakpoint-up(sm) {
+		border-left: 1px solid $gray-900;
+	}
 }
 .footer-nav a {
-  display: block;
-  padding: 10px 0;
-  -webkit-transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-  &:hover {
-    border-left-color: $yellow;
-  }
-  @media screen and (min-width: $break-small) {
-    border-left: 1px solid #2e2e2e;
-    @include rem(13);
-    padding: 5px 0 5px 10px;
-  }
+	display: block;
+	padding: 2px 0;
+	transition: all .2s ease-in-out;
+	&:hover {
+		border-left-color: $yellow;
+	}
+	@include media-breakpoint-up(sm) {
+		border-left: 1px solid $gray-900;
+		padding: 5px 0 5px 10px;
+	}
 }
-@media only screen and (max-width: $break-small) {
-  .mobile-half {
-    float: left;
-    width: 50%;
-  }
-}
-.footer .btn {color: #333;}
 .footer hr {
-  border-top-color: #000;
-  border-bottom-color: #2e2e2e;
-    margin: .5em 0;
-}
-.appt-btn {
-  border: 3px solid #eee;
-  color: #fff;
-  display: block;
-  margin-top: 12px;
-  padding: 5px;
-  text-align: center;
-  &:hover {
-    background: #fff;
-    color: #333;
-    text-decoration: none;
-  }
+	border-top-color: $black;
+	border-bottom-color: $gray-900;
+	margin: .5em 0;
 }
 .universitylink {
-  text-decoration: underline;
+	text-decoration: underline;
 }
