--- a/themes/homecoming/scss/site/_header.scss
+++ b/themes/homecoming/scss/site/_header.scss
@@ -1,14 +1,17 @@
 .header {
-	background-color: #181818;
-	box-shadow: 0 0 6px rgba(0,0,0,.5);
+	background-color: $black;
 	position: relative;
 	z-index: 10;
 }
 .header-container {
 	padding: .5em;
-	@media screen and (min-width :$break-medium) {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	@include media-breakpoint-up(md) {
 		display: flex;
 		justify-content: space-between;
+		flex-direction: row;
 		align-items: center;
 	}
 }
@@ -27,12 +30,10 @@
 	}
 	&__title {
 		margin: 0;
-		color: #fff;
+		color: $white;
 		font-size: 34px;
-		text-transform: uppercase;
 		line-height: 1;
-		letter-spacing: 1px;
-		@media screen and (min-width :$break-medium) {
+		@include media-breakpoint-up(md) {
 			font-size: 44px;
 		}
 	}
@@ -41,10 +42,10 @@
 Header Top
 --------------------------------------------------------------- */
 .header-date {
-	color: #ccc;
+	color: $gray-400;
 	font-size: 14px;
 	margin: 0;
-	@media screen and (min-width: $break-medium) {
+	@include media-breakpoint-up(md) {
 		float: right;
 	}
 }
