--- a/themes/homecoming/scss/site/_councilmembers.scss
+++ b/themes/homecoming/scss/site/_councilmembers.scss
@@ -14,17 +14,7 @@
 		margin: 0 1.2em 1.2em 0;
 	}
 }
-.council-pos, .council-bio {
-	font-size: $base-font-size * .9;
-}
-.council-email {
-	font-size: 14px;
-	vertical-align: middle;
-	margin-left: 5px;
-	color: #333;
-	opacity: .7;
-	text-decoration: underline;
-	&:hover, &:focus {
-		opacity: 1;
-	}
+.council-pos,
+.council-bio {
+	font-size: $font-size-base * .9;
 }
