adds virtual links to events

--- a/themes/homecoming/scss/site/_upcomingevents.scss
+++ b/themes/homecoming/scss/site/_upcomingevents.scss
@@ -7,9 +7,13 @@ Today's Events
 	&__title {
 		font-size: 20px;
 	}
-	& card-deck {
-		margin-left: -30px;
-		margin-right: -30px;
+	& .card-deck {
+        & .card {
+            @include media-breakpoint-up(md) {
+                max-width: 370px;
+            }
+            
+        }
 	}
 
 	@include media-breakpoint-up(sm) {
