--- a/themes/homecoming/scss/_config.scss
+++ b/themes/homecoming/scss/_config.scss
@@ -40,12 +40,12 @@ $grid-breakpoints: (
   sm: 576px,
   md: 768px,
   lg: 992px,
-  xl: 1200px
-) !default;
+  xl: 1260px
+);
 
 $container-max-widths: (
   sm: 540px,
-  md: 730px,
+  md: 720px,
   lg: 960px,
   xl: 1200px
-) !default;
+);
