--- a/themes/homecoming/scss/main.scss
+++ b/themes/homecoming/scss/main.scss
@@ -12,6 +12,7 @@
 @import "../../../node_modules/bootstrap/scss/mixins";
 
 // Optional
+@import "../../../node_modules/bootstrap/scss/root";
 @import "../../../node_modules/bootstrap/scss/reboot";
 @import "../../../node_modules/bootstrap/scss/type";
 @import "../../../node_modules/bootstrap/scss/images";
