--- a/themes/homecoming/scss/site/_footer.scss
+++ b/themes/homecoming/scss/site/_footer.scss
@@ -1,45 +1,75 @@
 .footer {
-	background: $black;
-	color: $gray-300;
-	padding: 3em 0 1em;
-	position: relative;
-	font-size: $small-font-size;
+    background: $black;
+    color: $gray-300;
+    padding: 3em 0 1em;
+    position: relative;
+    font-size: $small-font-size;
+
+    &__bar-link {
+
+
+        &:after {
+            display: inline-block;
+            padding-left: 5px;
+            content: "|"
+        }
+    }
+
+    &__copyright {
+        a {
+            text-decoration: underline;
+        }
+
+    }
 }
+
+
+
 .footer a {
-	color: $gray-300;
+    color: $gray-300;
+
 }
+
 .footer h4 {
-	color: $gray-300;
-	font-weight: 300;
+    color: $gray-300;
+    font-weight: 300;
 }
+
 .footer-nav {
-	padding: 1em 0 0;
-	column-count: 2;
-	column-gap: 10px;
-	& li {
-		margin-bottom: 0;
-	}
-	@include media-breakpoint-up(sm) {
-		border-left: 1px solid $gray-900;
-	}
+    padding: 1em 0 0;
+    column-count: 2;
+    column-gap: 10px;
+
+    & li {
+        margin-bottom: 0;
+    }
+
+    @include media-breakpoint-up(sm) {
+        border-left: 1px solid $gray-900;
+    }
 }
+
 .footer-nav a {
-	display: block;
-	padding: 2px 0;
-	transition: all .2s ease-in-out;
-	&:hover {
-		border-left-color: $yellow;
-	}
-	@include media-breakpoint-up(sm) {
-		border-left: 1px solid $gray-900;
-		padding: 5px 0 5px 10px;
-	}
+    display: block;
+    padding: 2px 0;
+    transition: all .2s ease-in-out;
+
+    &:hover {
+        border-left-color: $yellow;
+    }
+
+    @include media-breakpoint-up(sm) {
+        border-left: 1px solid $gray-900;
+        padding: 5px 0 5px 10px;
+    }
 }
+
 .footer hr {
-	border-top-color: $black;
-	border-bottom-color: $gray-900;
-	margin: .5em 0;
+    border-top-color: $black;
+    border-bottom-color: $gray-900;
+    margin: .5em 0;
 }
+
 .universitylink {
-	text-decoration: underline;
+    text-decoration: underline;
 }
