--- a/themes/homecoming/scss/site/_footer.scss
+++ b/themes/homecoming/scss/site/_footer.scss
@@ -6,12 +6,10 @@
     font-size: $small-font-size;
 
     &__bar-link {
-
-
         &:after {
             display: inline-block;
             padding-left: 5px;
-            content: "|"
+            content: "|";
         }
     }
 
@@ -19,20 +17,16 @@
         a {
             text-decoration: underline;
         }
-
     }
 }
 
-
-
 .footer a {
     color: $gray-300;
-
 }
 
-.footer h4 {
+.footer h5 {
     color: $gray-300;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 .footer-nav {
@@ -52,7 +46,7 @@
 .footer-nav a {
     display: block;
     padding: 2px 0;
-    transition: all .2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 
     &:hover {
         border-left-color: $yellow;
@@ -67,7 +61,7 @@
 .footer hr {
     border-top-color: $black;
     border-bottom-color: $gray-900;
-    margin: .5em 0;
+    margin: 0.5em 0;
 }
 
 .universitylink {
