--- a/themes/homecoming/scss/site/_header.scss
+++ b/themes/homecoming/scss/site/_header.scss
@@ -1,51 +1,57 @@
 .header {
-	background-color: $black;
-	position: relative;
-	z-index: 10;
+    background-color: #fff;
+    position: relative;
+    z-index: 10;
 }
 .header-container {
-	padding: .5em;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	@include media-breakpoint-up(md) {
-		display: flex;
-		justify-content: space-between;
-		flex-direction: row;
-		align-items: center;
-	}
+    padding: 1em 0.5em;
+    display: flex;
+    flex-direction: column;
+    @include media-breakpoint-up(md) {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        align-items: center;
+    }
 }
 .logo {
-	&__anchor {
-		display: flex;
-		align-items: center;
-		&:hover, &:focus {
-			text-decoration: none;
-		}
-	}
-	&__img {
-		display: block;
-		margin-right: 1em;
-		width: 85px;
-	}
-	&__title {
-		margin: 0;
-		color: $white;
-		font-size: 34px;
-		line-height: 1;
-		@include media-breakpoint-up(md) {
-			font-size: 44px;
-		}
-	}
+    &__anchor {
+        display: flex;
+        align-items: center;
+        &:hover,
+        &:focus {
+            text-decoration: none;
+        }
+    }
+    &__img {
+        display: block;
+        margin-right: 1em;
+        width: 85px;
+    }
+    &__title {
+        margin: 0;
+        color: $gray-800;
+        font-size: 30px;
+        line-height: 1;
+        font-family: $font-family-base;
+        font-weight: 300;
+        @include media-breakpoint-up(md) {
+            font-size: 35px;
+        }
+        & a {
+            color: $gray-800;
+            text-decoration: none;
+        }
+    }
 }
 /* ---------------------------------------------------------------
 Header Top
 --------------------------------------------------------------- */
 .header-date {
-	color: $gray-400;
-	font-size: 14px;
-	margin: 0;
-	@include media-breakpoint-up(md) {
-		float: right;
-	}
+    color: $gray-800;
+    font-size: 14px;
+    margin: 0;
+    @include media-breakpoint-up(md) {
+        float: right;
+    }
 }
