--- a/themes/homecoming/scss/site/_nav.scss
+++ b/themes/homecoming/scss/site/_nav.scss
@@ -1,14 +1,18 @@
 .nav-holder {
-	border-top: 1px solid $gray-800;
-	padding-bottom: 4px;
-	&:after {
-		background-color: $yellow;
-		display: block;
-		width: 100%;
-		height: 4px;
-		position: absolute;
-		bottom: 0;
-		content: "";
-		z-index: -1;
-	}
+    border-top: 1px solid $gray-300;
+    padding-bottom: 4px;
+    &:after {
+        background-color: $yellow;
+        display: block;
+        width: 100%;
+        height: 4px;
+        position: absolute;
+        bottom: 0;
+        content: "";
+        z-index: -1;
+    }
+    & .nav-link {
+        font-size: 16px;
+        font-weight: bold;
+    }
 }
