adding in 175 anniversary logo to the iowa bar

--- a/themes/homecoming/scss/site/_header.scss
+++ b/themes/homecoming/scss/site/_header.scss
@@ -1,3 +1,7 @@
+.uiowa--bar--wordmark--uiowa img {
+    width: auto;
+    height: 27px;
+}
 .header {
     background-color: #fff;
     position: relative;
